# aplicacion-presupuesto-mensual

./: .gitattributes  .gitignore  CHANGELOG.md  COMPARTIR.md  CONTRIBUTING.md  LICENSE  README.md  abrir_presupuesto.bat  build_exe.bat  presupuesto_app.py  pyproject.toml  requirements-build.txt  requirements.txt  subir_github.bat  verificar_python.bat
.github/workflows/: python-check.yml
docs/: CHECKLIST_PUBLICACION.md  COMPARTIR_EJECUTABLE.md  SUBIR_A_GITHUB.md
presupuesto/: __init__.py  app.py  constants.py  dialogs.py  store.py  utils.py
scripts/: generate_icon.py
